# HTP-internship-2.-The-project-task-of-the-team-11

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: cpp.yml
UML_диаграммы/: .$WorkerPool и очередь.drawio.bkp  WorkerPool и очередь.drawio  sequence.puml
ci-scripts/: check-lines.sh  run-clang-format.sh
itti_structs/: bearer_types.hpp  cu_iface_types.hpp  optional.hpp  test-struct.cpp  types.hpp
itti_structs/asn1c_build/: constr_TYPE.h
questions_for_client/: pack1.txt  pack2.txt
src/: CMakeLists.txt  ControlBlock.h  Runner.h
src/entity/: ErabReleaseResponseWrapper.cpp  ErabReleaseResponseWrapper.h  SerializeWrapper.h  UeBlindRequestWrapper.cpp  UeBlindRequestWrapper.h
src/entity/impl/: ErabReleaseResponseWrapper.cpp  PathSwtichRequestWrapper.cpp  UeBlindRequestWrapper.cpp
src/entity/include/: PathSwitchRequestWrapper.h  UeBlindRequestWrapper.h
src/io/: InputMessage.h  Message.h  OutputMessage.h
src/io/reader/: FileReader.h  ReadingInfo.h  StreamReader.h
src/io/writer/: FileWriter.h  StreamWriter.h
src/utility/: ConcurrentQueue.h  ThreadPool.cpp  ThreadPool.h
tests/: CMakeLists.txt  __CMakeLists.txt  test.cpp
tests/resources/: 1.json  2.json  3.json  invalid1.json
Вопросы держателю задач/: Вопросы держателю задачи 1.txt  Вопросы держателю задачи 2.txt
Сериализация и десиарелизация 1 спринт/: Распределение структур по команде.txt
